# config-gen

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  readme.md  seed.json  test.sh
bs/: Cargo.toml
bs/lib/: ssl.rs  system.rs  with_body.rs
bs/test/fixtures/: bundle-config.yaml  config-error.json  config.yml  rjs-config.js  (+3 more)
config-gen/: Cargo.toml
from-file/: Cargo.toml
from-file/src/: lib.rs
from_file_derive/: Cargo.toml
from_file_derive/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: main.rs
rjs-parse/: Cargo.toml
rjs-parse/src/: build_config.rs  bundle_config.rs  client_config.rs  config.rs  lib.rs  modules.rs  parse.rs
rjs-parse/src/js/: no-loaders.js
rjs-parse/tests/: e2e.rs
src/: fns.rs  headers.rs  lib.rs  main.rs  options.rs  rewrites.rs  test.rs  with_body.rs  without_body.rs
src/lib/: app_state.rs  bs.rs  config.rs  fns.rs  from_file.rs  headers.rs  options.rs  preset.rs  preset_m2.rs  preset_m2_bundle_config.rs  preset_m2_config_gen.rs  preset_m2_opts.rs  preset_m2_parse.rs  preset_m2_requirejs_config.rs  proxy_transform.rs  proxy_utils.rs  replacer.rs  rewrites.rs  setup.rs  system.rs  test_utils.rs  with_body.rs  without_body.rs
src/static/: requirejs.js
test/: config.yml
test/fixtures/: bundle-config.json  bundle-config.yaml  config-unsupported-preset.json  config.json  config.yml  example-build.js  example-config.json  example-post.json  person.json  person.yaml  rjs-config-expected.json  seed.json
test/test-app/: index.html
tests/: api.rs  integration_test.rs  proxy_transform.rs  proxy_transform_test.rs  test_main.rs
(+50 files in other folders)
