[package]
name = "bs_rust"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]

[dependencies]
env_logger = "0.5"
futures = "0.1"
openssl = { version="0.10" }
url = "1.7.1"
regex = "1.0.2"

actix = "0.7"
actix-web = { version = "0.7", features=["alpn"] }
bytes = "0.4.9"

[lib]
name = "bs_rust"
path = "src/lib.rs"
