[package]
name = "bs_rust"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]

[[bin]]
name = "config-gen"
path = "src/main.rs"

[lib]
name = "bs"
path = "src/lib/bs.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.5"
futures = "0.1"
openssl = { version="0.10" }
url = "1.7.1"
regex = "1.0.2"

actix = "0.7"
actix-web = { version = "0.7", features=["alpn"] }
base64 = "0.9.3"
bytes = "0.4.9"
mime = "0.3.8"
clap = "2.32.0"
http = "0.1.10"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

ratel = "0.7.0"
tempdir = "0.3.7"
reqwest = "0.9.2"
