[package]
name = "rjs"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
ratel = "0.7.0"
from_file = { path = "../from-file" }
from_file_derive = { path = "../from_file_derive" }

[lib]
name = "rjs"
path = "src/lib.rs"
